# kobs_plotter

./: .gitignore  CITATION.cff  LICENSE  README.md  kobs-plotter.spec  pyproject.toml  resources.qrc
.github/workflows/: release.yml
src/kobs_plotter/: main.py  main_old.py  resources_rc.py
src/kobs_plotter/core/: __init__.py  data_loader.py  defaults.py  diagnostics.py  modelling.py  models.py  plotting.py  service.py  settings.py  transforms.py  types.py
src/kobs_plotter/core/strategies/: __init__.py  base.py  multivariable.py  scatter_line.py  surface_3d.py
src/kobs_plotter/ui/: __init__.py  config_panel.py  controller.py  file_panel.py  main_window.py  plot_panel.py  plot_window.py  resettable.py  results_panel.py  ui_helpers.py  validators.py  viewmodel.py  widgets.py
tests/core/: test_multivariable.py
tests/ui/: conftest.py  test_config_panel.py  test_controller.py  test_file_panel.py  test_main_window.py  test_plot_panel.py  test_plot_window.py  test_resettable.py  test_results_panel.py  test_validators.py  test_viewmodel.py
