[project]
name = "kobs-plotter"
version = "0.2.0"
description = "tool to compute observed rate constant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[project.scripts]
kobs-plotter = "kobs_plotter.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobs_plotter"]
