[project]
name = "kobs-plotter"
version = "0.3.0a1"
description = "A desktop application for nonlinear curve fitting of tabular data with parameter estimation and goodness-of-fit statistics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[project.scripts]
kobs-plotter = "kobs_plotter.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobs_plotter"]
include = [
    "src/kobs_plotter/assets/icons/*.png",
]
