[project]
name = "kobs-plotter"
version = "0.3.0"
description = "A desktop application for scientific curve fitting and publication-ready visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[project.scripts]
kobs-plotter = "kobs_plotter.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "pytest-xvfb>=3.0",
    "ruff>=0.6",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobs_plotter"]
include = [
    "src/kobs_plotter/assets/icons/*.png",
    "src/kobs_plotter/assets/icons/*.ico",
]
